internal/provider/testdata/invalid-legacy-files/resource_with_sidebar_current.html.markdown
---
subcategory: "Example"
sidebar_current: "example_thing"
layout: "example"
page_title: "Example: example_thing"
description: |-
  Example description.
---

# Resource: example_thing

Byline.

## Example Usage

```terraform
resource "example_thing" "example" {
  name = "example"
}
```

## Argument Reference

* `name` - (Required) Name of thing.

## Attribute Reference

* `id` - Name of thing.
